--- a/cards.html
+++ b/cards.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Parallax Scrolling</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="cards.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Space+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -45,6 +45,6 @@
         </section>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="cards.js"></script>
 </body>
 </html>
